--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "express-formidable": "git+https://github.com/utatti/express-formidable.git",
     "express-session": "1.15.6",
     "express-winston": "2.4.0",
-    "marked": "^0.8.0",
-    "moment": "2.20.1",
+    "marked": "^4.0.14",
+    "moment": "^2.29.2",
     "mongolass": "~4.1.1",
     "objectid-to-timestamp": "1.3.0",
     "sha1": "1.1.1",
