--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
   "author": "nswbmw",
   "license": "MIT",
   "dependencies": {
-    "config-lite": "2.1.0",
-    "connect-flash": "0.1.1",
-    "connect-mongo": "2.0.1",
-    "ejs": "2.5.7",
-    "express": "4.16.2",
-    "express-formidable": "git+https://github.com/utatti/express-formidable.git",
-    "express-session": "1.15.6",
-    "express-winston": "2.4.0",
-    "marked": "^4.0.14",
-    "moment": "^2.29.2",
-    "mongolass": "~4.1.1",
-    "objectid-to-timestamp": "1.3.0",
-    "sha1": "1.1.1",
-    "winston": "2.4.0"
+    "config-lite": "^3.0.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
+    "marked": "^4.1.0",
+    "moment": "^2.29.4",
+    "mongolass": "^4.4.7",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
-    "eslint": "5.5.0",
-    "eslint-config-standard": "11.0.0-beta.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "5.2.1",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-standard": "3.0.1",
-    "istanbul": "0.4.5",
-    "mocha": "4.1.0",
-    "supertest": "3.0.0"
+    "eslint": "^8.23.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^10.0.0",
+    "supertest": "^6.2.4"
   }
 }
