--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myblog",
   "version": "1.0.0",
   "description": "my blog",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node .",
@@ -15,30 +16,29 @@
   "author": "nswbmw",
   "license": "MIT",
   "dependencies": {
-    "config-lite": "^3.0.0",
+    "config-lite": "^5.0.0",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.6.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "connect-mongo": "^5.1.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
     "express-formidable": "^1.2.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.2",
     "express-winston": "^4.2.0",
-    "marked": "^4.1.1",
-    "moment": "^2.29.4",
+    "marked": "^17.0.1",
+    "moment": "^2.30.1",
     "mongolass": "^4.4.7",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
-    "winston": "^3.8.2"
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "eslint": "^8.24.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^9.39.1",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-standard": "^5.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^10.0.0",
-    "supertest": "^6.3.0"
+    "mocha": "^11.7.5",
+    "supertest": "^7.1.4"
   }
 }
